# apps/gooseforum/resource/src/admin/runtime/access.ts
@@ -18,6 +18,7 @@ const adminPathPermissions: Record<string, AdminPermission> = {
   '/admin/wiki': AdminPermission.PageManager,
   '/admin/sponsors': AdminPermission.PageManager,
   '/admin/badges': AdminPermission.SiteManager,
+  '/admin/stickers': AdminPermission.SiteManager,
   '/admin/files/resources': AdminPermission.SiteManager,
   '/admin/opt-records': AdminPermission.Admin,
   '/admin/review-queue': AdminPermission.SiteManager,
@@ -51,6 +52,7 @@ const adminEntryPaths = [
   '/admin/wiki',
   '/admin/sponsors',
   '/admin/badges',
+  '/admin/stickers',
   '/admin/files/resources',
   '/admin/opt-records',
   '/admin/review-queue',
